--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/RaduMS/nodeLesson#readme",
   "dependencies": {
+    "config": "^3.2.4",
     "express": "^4.17.1",
-    "joi": "^14.3.1"
+    "helmet": "^3.21.2",
+    "joi": "^14.3.1",
+    "morgan": "^1.9.1",
+    "rc": "^1.2.8"
   }
 }
