--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   "homepage": "https://github.com/RaduMS/nodeLesson#readme",
   "dependencies": {
     "config": "^3.2.4",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "joi": "^14.3.1",
     "morgan": "^1.9.1",
+    "pug": "^2.0.4",
     "rc": "^1.2.8"
   }
 }
