--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "joi": "^14.3.1",
+    "mongoose": "^5.8.9",
+    "mongose": "0.0.2-security",
     "morgan": "^1.9.1",
     "pug": "^2.0.4",
     "rc": "^1.2.8"
